--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-device-info": "^13.0.0",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.7.1"
+    "react-native-svg": "^15.7.1",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -36,11 +40,13 @@
     "@react-native/typescript-config": "0.75.2",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-logger": "^3.0.13",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
+    "redux-logger": "^3.0.6",
     "typescript": "5.0.4"
   },
   "engines": {
