--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -112,6 +112,20 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
+  // Flipper dependencies
+    def flipper_version = '0.191.1'
+    debugImplementation "com.facebook.flipper:flipper:$flipper_version"
+    debugImplementation "com.facebook.flipper:flipper-network-plugin:$flipper_version"
+    debugImplementation "com.facebook.flipper:flipper-leakcanary2-plugin:$flipper_version"
+    debugImplementation 'com.facebook.soloader:soloader:0.10.4'
+
+    // Include `flipperandroidnoop` and `soloadernoop` individually
+    releaseImplementation 'com.github.theGlenn.flipper-android-no-op:flipperandroidnoop:0.11.4'
+    releaseImplementation 'com.github.theGlenn.flipper-android-no-op:soloadernoop:0.11.4'
+
+    // Includes both libraries
+    releaseImplementation 'com.github.theGlenn:flipper-android-no-op:0.11.4'
+    
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
