--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,6 +11,11 @@ buildscript {
         google()
         mavenCentral()
     }
+    allprojects {
+        repositories {
+            maven { url 'https://jitpack.io' }
+        }
+    }
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
