--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
+    "reactotron-react-native": "^5.1.9",
     "redux-logger": "^3.0.6",
     "typescript": "5.0.4"
   },
