--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-bootsplash": "^6.1.4",
     "react-native-device-info": "^13.0.0",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-safe-area-context": "^4.11.0",
